# DFA

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
dfa_media/: manage.py
dfa_media/dfa_media/: asgi.py  settings.py  urls.py  wsgi.py
dfa_media/gallery/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
dfa_media/gallery/migrations/: 0001_initial.py  0002_rename_photo_photocollection_file.py
